--- a/html/dialog-plugins.html
+++ b/html/dialog-plugins.html
@@ -1,7 +1,12 @@
 <div class="dialog-cordova-plugins template modal">
     <div class="loader"><div class="gif"></div></div>
     <div class="modal-header">
-        <h1 class="dialog-title">Cordova - Plugins</h1>
+        <h1 class="dialog-title pull-left">Cordova - Plugins</h1>
+        <p class="info pull-right">
+            <span class="total">0</span> plugins installed<br />
+            <a href="http://plugins.cordova.io">Apache Cordova plugins registry</a>
+        </p>
+        <div class="clearfix"></div>
     </div>
     <div class="modal-body">
         <div class="dialog-message">
